--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
   },
   "devDependencies": {
-    "grunt": "git://github.com/gruntjs/grunt#file-mapping",
-    "grunt-contrib-coffee": "git://github.com/gruntjs/grunt-contrib-coffee.git#01f90adb16e315ee88c0befa5bb401bbfd4cbc6e",
-    "grunt-contrib-clean": "0.4.x",
-    "grunt-contrib-copy": "git://github.com/concordusapps/grunt-contrib-copy.git",
+    "grunt": "0.4.x",
+    "grunt-contrib-coffee": "0.4.x",
+    "grunt-contrib-clean": "0.4.0rc6",
+    "grunt-contrib-copy": "0.4.0rc7",
     "grunt-contrib-compass": "0.1.x",
-    "grunt-contrib-connect": "git://github.com/gruntjs/grunt-contrib-connect.git#cce476636630d73955e6b461a3f5460b01158eba",
+    "grunt-contrib-connect": "0.1.1rc6",
     "grunt-contrib-watch": "0.2.x",
     "grunt-coffeelint": "0.0.x",
     "grunt-requirejs": "0.3.x",
